# Mapping_Suite

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  cache.py  errors.py  main.py  masking.py  models.py  pointcloud.py
backend/tests/: test_api.py  test_masking.py  test_pointcloud.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  exportPath.test.ts  exportPath.ts  maskState.test.ts  maskState.ts  polygonEditing.test.ts  polygonEditing.ts  styles.css  types.ts  viewNavigation.test.ts  viewNavigation.ts
frontend/src/components/: LayerPanel.tsx  PointCloudCanvas.tsx  SideSliceView.tsx
