[project]
name = "mapping-suite-backend"
version = "0.1.0"
description = "Local backend for point-cloud mask editing."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=2.0.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.12",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
